<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <TextView
        android:id="@+id/ask_reward_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_reward_item_title_tv"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:lines="2"
        />
    <TextView
        android:id="@+id/ask_reward_item_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_reward_item_tag_tv"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ask_reward_item_avatar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/default_avatar"
            />
        <TextView
            android:id="@+id/ask_reward_item_username"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="program008"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_toRightOf="@id/ask_reward_item_avatar"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/ask_reward_item_tw_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/ask_reward_item_tw_time_tv"
            android:layout_toRightOf="@id/ask_reward_item_username"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:singleLine="true"
            />
        <TextView
            android:id="@+id/ask_reward_item_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_reward_item_reward_tv"
            android:textSize="12sp"
            android:textColor="@color/sandybrown"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:id="@+id/ask_reward_item_ask1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_reward_item_ask1"
            android:textSize="12sp"
            android:layout_toLeftOf="@id/ask_reward_item_reward"
            android:layout_marginRight="5dp"

            />
    </RelativeLayout>
</LinearLayout>